--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		<div class="collapse navbar-collapse" id="menu-principal">
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp&nbspHome <span class="sr-only">(current)</span></a></li>
+				<li><a href="allinone.html"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>&nbsp&nbspSolve All</a></li>
 				<li><a href="linear.html"><span class="glyphicon glyphicon-resize-full" aria-hidden="true"></span>&nbsp&nbspLinear</a></li>
 				<li><a href="nonlinear.html"><span class="glyphicon glyphicon-random" aria-hidden="true"></span>&nbsp&nbspNon Linear</a></li>
 				<li><a href="plot.html"><span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span>&nbsp&nbspPlot</a></li>
