Added Fav icon png
Minor change.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. --> 
+	<link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
+
+	<!-- Firefox, Chrome, Safari, IE 11+ and Opera. 196x196 pixels in size. -->
+	<link rel="icon" href="favicon.png">
     <title>Regression Solver</title>
 
     <!-- Bootstrap -->
@@ -55,7 +60,7 @@
 <div class="container">
 <h2>Solve Linear and Non Linear Regressions</h2>
 <h3>Select a method from top menu.</h3>
-<h4><a href="https://github.com/romelsan" target="blank">Link to my Repo</a></h4>
+<h4><a href="https://github.com/RomelSan/Linear-Regression" target="blank">Link to the source code</a></h4>
 	
 </div>
 
