--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="http://www.logicminds.net" target="blank">Regression Solver</a>
+			<a class="navbar-brand" href="https://www.romelvera.com" target="blank">Regression Solver</a>
 		</div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
